tryphon_macros/tests/ui/fail/invalid_default.rs
use tryphon::Config;

#[derive(Config)]
struct BadConfig {
    #[env("PORT")]
    #[default(some_function())]
    port: u16,
}

fn main() {}
